--- a/templates/frontend/category.html.twig
+++ b/templates/frontend/category.html.twig
@@ -59,15 +59,7 @@ s.parentNode.insertBefore(as, s);
 								<div class="collapse navbar-collapse my-lg-0" id="navbarNav">
 									<ul class="navbar-nav mr-auto text-left">
 										<li class="nav-item">
-											<a class="nav-link scroll" href="/">Home</a>
-										</li>
-
-										<li class="nav-item">
-											<a class="nav-link scroll" href="about-us.html">About Us</a>
-										</li>
-
-										<li class="nav-item">
-											<a class="nav-link scroll" href="contact-us.html">Contact Us</a>
+											<a class="nav-link scroll" href="/page">Home</a>
 										</li>
 									</ul>
 								</div>
@@ -219,7 +211,7 @@ s.parentNode.insertBefore(as, s);
 																<span>Product Type Discription</span>
 																<h4 class="price-text">{{product.price}}</h4>
 																<p class="list-content">Lorem ipsum dolor sit amet, consectetuer adipiscing
-																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																							                                             elit. Aenean commodo ligula eget dolor Aenean massa.</p>
+																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																											                                             elit. Aenean commodo ligula eget dolor Aenean massa.</p>
 																<a href="#" class="add-cart">
 																	<i class="fas fa-cart-plus"></i>
 																	Add To Cart</a>
@@ -292,8 +284,15 @@ s.parentNode.insertBefore(as, s);
 				</div>
 			</div>
 		</div>
+		<!-- Jquery.min.js-->
+		<script src="  {{ asset('theme/js/jquery-3.3.1.slim.min.js') }}"></script>
+		<script src="  {{ asset('theme/js/jquery.1.12.4.js') }}"></script>
+		<script src="  {{ asset('theme/js/bootstrap.min.js') }}"></script>
+		<script src="  {{ asset('theme/js/jquery.slicknav.min.js') }}"></script>
+		<script src="  {{ asset('theme/js/slick.min.js') }}"></script>
+		<script src="  {{ asset('theme/js/lity.min.js') }}"></script>
+		<script src="  {{ asset('theme/js/imagesloaded.js') }}"></script>
+		<script src="  {{ asset('theme/js/wow.min.js') }}"></script>
+		<script src="  {{ asset('theme/js/main.js') }}"></script>
 	</body>
-</html></section><!-- JavaScript --><script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></sc><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script><!-- CSS --><linkrel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"/><!-- Default theme --><linkrel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css"/><!-- Semantic UI theme --><linkrel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/semantic.min.css"/><!-- Bootstrap theme --><linkrel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/bootstrap.min.css"/><!---End-Shop-section-->{% if  addProductStatus  is defined   %}
-<script>
-	alertify.success("Ürün sepete eklendi");
-</script>{% endif %}<!-- Jquery.min.js--><script src="  {{ asset('theme/js/jquery-3.3.1.slim.min.js') }}"></script><script src="  {{ asset('theme/js/jquery.1.12.4.js') }}"></script><script src="  {{ asset('theme/js/bootstrap.min.js') }}"></script><script src="  {{ asset('theme/js/jquery.slicknav.min.js') }}"></script><script src="  {{ asset('theme/js/slick.min.js') }}"></script><script src="  {{ asset('theme/js/lity.min.js') }}"></script><script src="  {{ asset('theme/js/imagesloaded.js') }}"></script><script src="  {{ asset('theme/js/wow.min.js') }}"></script><script src="  {{ asset('theme/js/main.js') }}"></script></body></html></body></html></body></html>
+</html>
