--- a/templates/frontend/basket.html.twig
+++ b/templates/frontend/basket.html.twig
@@ -56,16 +56,8 @@ s.parentNode.insertBefore(as, s);
 							<nav class="navbar navbar-expand-lg navbar-light">
 								<div class="collapse navbar-collapse my-lg-0" id="navbarNav">
 									<ul class="navbar-nav mr-auto text-left">
-										<li class="nav-item">
-											<a class="nav-link scroll" href="/">Home</a>
-										</li>
-
-										<li class="nav-item">
-											<a class="nav-link scroll" href="about-us.html">About Us</a>
-										</li>
-
-										<li class="nav-item">
-											<a class="nav-link scroll" href="contact-us.html">Contact Us</a>
+											<li class="nav-item">
+											<a class="nav-link scroll" href="/page">Home</a>
 										</li>
 									</ul>
 								</div>
