--- a/templates/frontend/check-out.html.twig
+++ b/templates/frontend/check-out.html.twig
@@ -58,15 +58,7 @@ s.parentNode.insertBefore(as, s);
 								<div class="collapse navbar-collapse my-lg-0" id="navbarNav">
 									<ul class="navbar-nav mr-auto text-left">
 										<li class="nav-item">
-											<a class="nav-link scroll" href="/">Home</a>
-										</li>
-
-										<li class="nav-item">
-											<a class="nav-link scroll" href="about-us.html">About Us</a>
-										</li>
-
-										<li class="nav-item">
-											<a class="nav-link scroll" href="contact-us.html">Contact Us</a>
+											<a class="nav-link scroll" href="/page">Home</a>
 										</li>
 									</ul>
 								</div>
