--- a/templates/frontend/index.html.twig
+++ b/templates/frontend/index.html.twig
@@ -59,16 +59,10 @@ s.parentNode.insertBefore(as, s);
 								<div class="collapse navbar-collapse my-lg-0" id="navbarNav">
 									<ul class="navbar-nav mr-auto text-left">
 										<li class="nav-item">
-											<a class="nav-link scroll" href="/">Home</a>
+											<a class="nav-link scroll" href="/page">Home</a>
 										</li>
 
-										<li class="nav-item">
-											<a class="nav-link scroll" href="about-us.html">About Us</a>
-										</li>
-
-										<li class="nav-item">
-											<a class="nav-link scroll" href="contact-us.html">Contact Us</a>
-										</li>
+									 
 									</ul>
 								</div>
 							</nav>
@@ -160,9 +154,7 @@ s.parentNode.insertBefore(as, s);
 															<button type="submit" class="add-to-cart">
 																<i class="fas fa-cart-plus">Add To Card</i>
 															</button>
-															<a href="#" class="add-to-cart">
-																<i class="fas fa-cart-plus"></i>
-																Add To Cart</a>
+														 
 														</form>
 
 													</div>
